--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
 	p{
 		color: red;
 		background: black;	
+		animation-name: oncclickanim;
+		animation-duration: 10s;
 	}
 	*{
-		background: black;
-		color: white;
+		
+
+
 	}
+	@keyframes oncclickanim 
+	{
+
+		  50% {top:  0px;font-size: 50px; color: red;background: blueviolet;}
+	
+}
+
 </style>
 <body>
 
